# keva-lite

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: bp_node.cpp  bp_node.hpp  db_file_manager.cpp  db_file_manager.hpp  db_manager.cpp  db_manager.hpp  file_manager.cpp  file_manager.hpp  keva_lite.cpp  keva_lite.hpp  main.cpp  types.hpp  utils.hpp
test/: CMakeLists.txt  External_GTest.cmake  bp_node_test.cpp  db_manager_test.cpp  file_manager_test.cpp  keva_lite_test.cpp  keva_test_main.cpp  test_utils.cpp  test_utils.hpp  utils_test.cpp
